# dynamic-skills

./: .gitignore  README.md  pyproject.toml
src/dynamic_skills/: __init__.py  __main__.py  agent.py  cli.py  config.py  observer.py  skill.py  tracker.py  utils.py
tests/: test_config.py  test_observer.py  test_skill.py  test_tracker.py
